--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "start-user-app": "cd ./apps/user-app && npm run start"
   },
   "dependencies": {
     "@repo/db": "*",
